# baseAgent

./: .gitignore  README.md
back/: __init__.py  constants.py  exceptions.py  main.py  pyproject.toml  types.py
back/api/: middleware.py  router.py
back/chat/: context_compactor.py  message_processor.py  prompt_builder.py  stream_handler.py  tool_executor.py
back/memory/: base_memory.py  conversation_memory.py  file_memory.py
back/service/: agent_service.py
back/skills/: base_skill.py  skill_loader.py  skill_registry.py
back/state/: __init__.py  base_flow.py  session_manager.py  session_state.py  session_store.py  task_state.py
back/tasks/: __init__.py  analysis_task.py  base_task.py  chat_task.py  problem_analyzer.py  task_definition.py  task_manager.py  task_orchestrator.py  task_plan.py
back/tools/: base_tool.py  tool_registry.py  tool_result.py
back/utils/: message_utils.py  text_utils.py
