[project]
name = "agent"
version = "1.0.0"
description = "智能体服务"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "orjson>=3.10",
    "psycopg[binary]>=3.1",
    "asyncpg>=0.29",
]

[project.scripts]
agent = "agent.main:main"
